Allow filtering datasets by source type and name
